# tystar_cz

./: .env.example  .gitignore  .platform.app.yaml  .pre-commit-config.yaml  Pipfile  Procfile  README.md  manage.py  pyproject.toml
.platform/: routes.yaml  services.yaml
base/: asgi.py  settings.py  urls.py  views.py  wsgi.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20190411_0638.py  0003_auto_20190411_2139.py  0004_post_source.py  0005_auto_20190412_1656.py  0006_auto_20190413_0926.py  0007_auto_20190413_1005.py  0008_auto_20190413_1409.py  0009_auto_20190413_1520.py  0010_resource_description.py  0011_auto_20190415_0645.py  0012_auto_20190415_1915.py  0013_tag_slug.py  0014_auto_20190417_0847.py  0015_auto_20190417_0933.py  0016_resource_name.py  0017_resource_description.py  0018_auto_20190418_1642.py  0019_auto_20190421_0803.py
my_site/: admin.py  models.py  urls.py  views.py
my_site/migrations/: 0001_initial.py  0002_alter_article_content.py  0003_category_tag_article_categories_article_tags.py  0004_project.py
my_site/templates/: about.html  article.html  base.html  blog_article_detail.html  blog_homepage.html  category.html  homepage.html  portfolio.html  tag.html
static/css/: custom.css  skeleton.css
templates/: about.html  base.html  contact.html  footer.html  homepage.html  main_sidebar.html
templates/blog/: add_category.html  base.html  blog_base.html  categories_sidebar.html  category.html  index.html  list_categories.html  list_tags.html  post.html  (+1 more)
tystar_cz/: hosts.py  urls.py  wsgi.py
(+8 files in other folders)
