[tool.poetry]
name = "tystar_cz"
version = "0.1.0"
description = ""
authors = ["tystar86 <stepankalucinova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.7"
dj-database-url = "2.1.0"
django-extensions = "3.2.3"
django-ckeditor = "6.7.0"
waitress = "2.1.2"
psycopg2 = "2.9.9"
whitenoise = {extras = ["brotli"], version = "6.6.0"}
gunicorn = "21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
